--- a/man.html
+++ b/man.html
@@ -46,17 +46,17 @@
 
             <div class="cols image-cols">
                 <div class="imagebox scale">
-                    <img src="images/robin-davidson-oDnPch2Fu1U-unsplash__1_-removebg-preview.png" alt="Nike New Balance 574" class="image active">
-                    <img src="images/istockphoto-472046671-612x612-removebg-preview.png" alt="nike predator" class="image">
-                    <img src="images/th-removebg-preview.png" alt="- Nike Air Force 1 " class="image">
+                    <img src="robin-davidson-oDnPch2Fu1U-unsplash__1_-removebg-preview.png" alt="Nike New Balance 574" class="image active">
+                    <img src="istockphoto-472046671-612x612-removebg-preview.png" alt="nike predator" class="image">
+                    <img src="th-removebg-preview.png" alt="- Nike Air Force 1 " class="image">
                 </div>
                 <span class="element right"></span>
                 </div>
             </div>
             <div class="thumbnails raiseup">
-                <span class="raiseup"><img src="images/robin-davidson-oDnPch2Fu1U-unsplash__1_-removebg-preview.png" alt=""></span>
-                <span class="raiseup"><img src="images/istockphoto-472046671-612x612-removebg-preview.png" alt=""></span>
-            <span class="raiseup"><img src="images/th-removebg-preview.png" alt=""></span>
+                <span class="raiseup"><img src="robin-davidson-oDnPch2Fu1U-unsplash__1_-removebg-preview.png" alt=""></span>
+                <span class="raiseup"><img src="istockphoto-472046671-612x612-removebg-preview.png" alt=""></span>
+            <span class="raiseup"><img src="th-removebg-preview.png" alt=""></span>
             </div>
             <div class ="socialinks scale">
                 <i class="uil uil-facebook"></i>
