--- a/kids.html
+++ b/kids.html
@@ -46,17 +46,17 @@
 
             <div class="cols image-cols">
                 <div class="imagebox scale">
-                    <img src="images/NIKE JAM.png" alt="Nike jam 6" class="image active">
-                    <img src="images/SABRINA 2 EP.webp" alt="Future Rider" class="image">
-                    <img src="images/AIR JORDAN 4 RM.png" alt="Nike Revolution 6" class="image">
+                    <img src="NIKE JAM.png" alt="Nike jam 6" class="image active">
+                    <img src="SABRINA 2 EP.webp" alt="Future Rider" class="image">
+                    <img src="AIR JORDAN 4 RM.png" alt="Nike Revolution 6" class="image">
                 </div>
                 <span class="element right"></span>
                 </div>
             </div>
             <div class="thumbnails raiseup">
-                <span class="raiseup"><img src="images/NIKE JAM.png" alt=""></span>
-                <span class="raiseup"><img src="images/SABRINA 2 EP.webp" alt=""></span>
-            <span class="raiseup"><img src="images/AIR JORDAN 4 RM.png" alt=""></span>
+                <span class="raiseup"><img src="NIKE JAM.png" alt=""></span>
+                <span class="raiseup"><img src="SABRINA 2 EP.webp" alt=""></span>
+            <span class="raiseup"><img src="AIR JORDAN 4 RM.png" alt=""></span>
             </div>
             <div class ="socialinks scale">
                 <i class="uil uil-facebook"></i>
