--- a/women.html
+++ b/women.html
@@ -10,7 +10,7 @@
 </head>
 <body>  <div class="container">
         <nav class="reveal">
-            <a href="" id="logo"> <img src="images/ChatGPT Image Apr 22, 2025, 02_09_17 AM.png" alt="logo"></a>
+            <a href="" id="logo"> <img src="ChatGPT Image Apr 22, 2025, 02_09_17 AM.png" alt="logo"></a>
             <ul>
                 <li><a href="index.html">New & Featured</a></li>
                 <li><a href="man.html">Man</a></li>
