--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="container">
         <nav class="reveal">
             <a href="#" id="logo">
-                <img src="images/ChatGPT Image Apr 22, 2025, 02_09_17 AM.png" alt="logo">
+                <img src="ChatGPT Image Apr 22, 2025, 02_09_17 AM.png" alt="logo">
             </a>
             
             <!-- Hamburger Menu -->
