--- a/new&Featured.html
+++ b/new&Featured.html
@@ -11,7 +11,7 @@
 <body> 
     <div class="container">
         <nav class="reveal">
-            <a href="" id="logo"> <img src="images/ChatGPT Image Apr 22, 2025, 02_09_17 AM.png" alt="logo"></a>
+            <a href="" id="logo"> <img src="ChatGPT Image Apr 22, 2025, 02_09_17 AM.png" alt="logo"></a>
             <ul>
                 <li><a href="new&Featured.html">New & Featured</a></li>
                 <li><a href="man.html">Man</a></li>
