--- a/testimonials.html
+++ b/testimonials.html
@@ -12,7 +12,7 @@
         <!-- Navigation -->
         <nav class="reveal">
             <a href="#" id="logo">
-                <img src="images/ChatGPT Image Apr 22, 2025, 02_09_17 AM.png" alt="Sole Sync logo">
+                <img src="ChatGPT Image Apr 22, 2025, 02_09_17 AM.png" alt="Sole Sync logo">
             </a>
             <ul>
                 <li><a href="index.html">New & Featured</a></li>
